--- a/app/views/signups/phone.html.haml
+++ b/app/views/signups/phone.html.haml
@@ -23,7 +23,7 @@
     .field
       = f.label :phone_number, "携帯電話の番号", class: "member-text"
       %br/
-      = f.text_field :phone_number, autofocus: true, class: "field-input", placeholder: "携帯電話の番号を入力",autocomplete: "phone_number"
+      = f.telephone_field :phone_number, autofocus: true, class: "field-input", placeholder: "携帯電話の番号を入力",autocomplete: "phone_number"
     
 
       .member-person-wrap-suer-text
