--- a/app/assets/stylesheets/posts/user.scss
+++ b/app/assets/stylesheets/posts/user.scss
@@ -270,6 +270,11 @@ body {
   margin: 8px 4px 0 0;
   border-radius: 4px;
   font-size: 16px;
+  &-day {
+    border-style: none;
+    width: 200px;
+    color: pink;
+  }
 }
 .member-person-wrap-suer-text-center {
   text-align: center;
