--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,10 @@
 @import "mypage/show";
 @import "mypage/destroy";
 @import "mypage/delete";
+@import "mypage/profile";
+@import "mypage/confirmation";
+@import "mypage/card";
+
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
