--- a/app/views/mypages/confirmation.html.haml
+++ b/app/views/mypages/confirmation.html.haml
@@ -4,6 +4,9 @@
   = render "layouts/breadcrumbs"
 
 .main
+  .confirmation
+    .confirmation__content 完了
+    .confirmation__box 確認済みです
 
   = render partial: "side"
 = render partial: 'posts/footer', post: @post
