--- a/app/views/signups/new.html.haml
+++ b/app/views/signups/new.html.haml
@@ -95,12 +95,13 @@
     .submit-button-text
       = link_to "本人登録の情報について＞"
 
-  %ul.footer-wrap
-    %li.footer-text プライバシーポリシー
-    %li.footer-text メルカリ利用規約
-    %li.footer-text 特定商取引に関する表記
+  = render 'signups/footer'
+  -# %ul.footer-wrap
+  -#   %li.footer-text プライバシーポリシー
+  -#   %li.footer-text メルカリ利用規約
+  -#   %li.footer-text 特定商取引に関する表記
   
-  .footer-image
-    = link_to image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?2177740229", width: '70', height: '70'), root_path
-  .footer-copy
-    %p &copy; 2019 Mercari
+  -# .footer-image
+  -#   = link_to image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?2177740229", width: '70', height: '70'), root_path
+  -# .footer-copy
+  -#   %p &copy; 2019 Mercari
