--- a/app/views/mypages/address.html.haml
+++ b/app/views/mypages/address.html.haml
@@ -65,7 +65,7 @@
           %br/
           = f.text_field :phone_number, autofocus: true, class: "field-input", placeholder: "例) 09012345678",autocomplete: "phone_number"
         .address-group
-          = f.submit "次へ進む", class: "submit-button"
+          = f.submit "変更する", class: "submit-button"
 
 
   = render partial: "side"
