--- a/app/views/mypages/password.html.haml
+++ b/app/views/mypages/password.html.haml
@@ -2,8 +2,42 @@
 .navi
   - breadcrumb :password_mypage
   = render "layouts/breadcrumbs"
-
+.camera
+  =link_to new_post_path, class: "camera__box" do
+    .camera__box-name
+      出品
+    .camera__box-font
+      %i.fas.fa-camera
 .main
+  %section.mypassword
+    %h2 メール/パスワード
+    .mypassword-wrapper
+      = form_for current_user, url: address_mypages_path, method: :get do |f|
+        .mypassword-group-top
+          = f.label :email, "メールアドレス", class: "member-text"
+          %br/
+          = f.email_field :email, autofocus: true, class: "field-input", placeholder: "PC・携帯どちらでも可",autocomplete: "email"
+          .mypassword-text
+            %p メールアドレスを変更すると確認メールが送信されます。メール内のURLをクリックすると変更完了です。
 
+        .mypassword-group
+          = f.label :password, "現在のパスワード", class: "member-text"
+          %br/
+          = f.password_field :password, autofocus: true, class: "field-input",autocomplete: "password"
+  
+        .mypassword-group
+          = f.label :password, "新しいパスワード", class: "member-text"
+          %br/
+          = f.password_field :password, autofocus: true, class: "field-input", placeholder: "7文字以上",autocomplete: "password"
+  
+        .mypassword-group
+          = f.label :password, "新しいパスワード確認", class: "member-text"
+          %br/
+          = f.password_field :password, autofocus: true, class: "field-input", placeholder: "7文字以上",autocomplete: "password"
+          .mypassword-text
+            %p パスワードを設定したい場合は上記をすべて入力してください。（設定しない場合は空欄）
+        .address-group
+          = f.submit "変更する", class: "submit-button"
+  
   = render partial: "side"
 = render partial: 'posts/footer', post: @post
