--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -15,7 +15,7 @@
                 .image_box_main
                   .preview
                   %label{for:"image",class:"image_box"}
-                    %input{name:"item[item_images_attributes][][image]" ,type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple:  true,data: {image: 0}}/
+                    %input{name:"product_images[image][]",type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple:  true,data: {image: 0}}/
               .good_content
                 .good_content_box
                   .good_content_title 商品名
