--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "mypage/confirmation";
 @import "mypage/card";
 @import "mypage/address";
+@import "mypage/password";
+@import "mypage/identification";
 
 
 /*
