--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -124,7 +124,9 @@
                       = shipment.select :shipping_method, [["未定", "未定"], ["らくらくメルカリ便", "らくらくメルカリ便"], ["ゆうメール", "ゆうメール"], ["レターパック", "レターパック"], ["普通郵便(定形、定形外)", "普通郵便(定形、定形外)"], ["クロネコヤマト", "クロネコヤマト"], ["ゆうパック", "ゆうパック"], ["クリックポスト", "クリックポスト"], ["ゆうパケット", "ゆうパケット"]],  :prompt => "---" ,class:"good_send_task_box"
                       = shipment.label "発送元の地域"                      
                       .must 必須
-                      = shipment.select :ship_from, [["1~2日で配送", "1~2日で配送"], ["3~4日で配送", "3~4日で配送"], ["5~6日で配送", "5~6日で配送"]],  :prompt => "---" ,class:"good_send_task_box"
+                      = shipment.select :ship_from, [['北海道','北海道'],['青森県',],['青森県',],['宮城県', '秋田県', '山形県', '福島県', '茨城県', '栃木県', '群馬県', '埼玉県', '千葉県', '東京都', '神奈川県', '新潟県', '富山県', '石川県', '福井県', '山梨県', '長野県', '岐阜県', '静岡県', '愛知県', '三重県', '滋賀県', '京都府', '大阪府', '兵庫県', '奈良県', '和歌山県', '鳥取県', '島根県', '岡山県', '広島県', '山口県', '徳島県', '香川県', '愛媛県', '高知県', '福岡県', '佐賀県', '長崎県', '熊本県', '大分県', '宮崎県', '鹿児島県', '沖縄県', '未定']],  :prompt => "---" ,class:"good_send_task_box"
+                      = shipment.select :ship_from, [['北海道','北海道'],['青森県','青森県'],['青森県','青森県'],['宮城県','宮城県'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],['北海道','北海道'],],  :prompt => "---" ,class:"good_send_task_box"
+
                       = shipment.label "発送までの日数"                      
                       .must 必須
                       = shipment.select :ship_days, [["1~2日で配送", "1~2日で配送"], ["3~4日で配送", "3~4日で配送"], ["5~6日で配送", "5~6日で配送"]],  :prompt => "---" ,class:"good_send_task_box"
