--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -29,7 +29,7 @@
               %td らくらくメルカリ便
             %tr
               %th 配送元地域
-              %td= link_to "#{@post.shipment.ship_from}"
+              %td= link_to "#{@area.name}"
             %tr
               %th 配送日の目安
               %td= "#{@post.shipment.ship_days}"
